--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,3 +41,20 @@ input::placeholder {
 label {
   font-weight: 100;
 }
+
+
+._stepbackgroundalkdmsaldkma {
+  background: #ddd;
+  width: 100%;
+  right: 0;
+  left: 0;
+}
+
+.exssubmitform {
+  position: fixed;
+  bottom: 0;
+  z-index: 999;
+  width: 100%;
+  padding: 20px 20px 20px;
+  margin: 0 auto;
+}
